[doc] Added the documentation of how to generate an OOM